--- a/louisvilleMusicCo/css/main.css
+++ b/louisvilleMusicCo/css/main.css
@@ -146,7 +146,7 @@ input[type="search"] {
 
 }
 
-button[type="submit"] {
+#sbutton button[type="submit"] {
    width:35px;
    height:30px;
    background-image:url(../images/search-btn.png);
@@ -434,6 +434,109 @@ footer p {
   
 }
 
+/*------------------------------------------------------------------
+                        CONTACTUS STYLES
+-------------------------------------------------------------------*/
+
+form {
+  max-width: 300px;
+  margin: 10px auto;
+  padding: 10px 20px;
+  background: #fafad2;
+  border-radius: 8px;
+}
+
+#form h1 {
+  margin: 0 0 30px 0;
+  text-align: center;
+}
+
+#form input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="datetime"],
+#form input[type="email"],
+input[type="number"],
+#form input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+textarea,
+#form select {
+  background: rgba(255,255,255,0.1);
+  border: none;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 15px;
+  width: 100%;
+  background-color: #f6f6af;
+  color: #8a97a0;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  margin-bottom: 30px;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+  margin: 0 4px 8px 0;
+}
+
+#form select {
+  padding: 6px;
+  height: 32px;
+  border-radius: 2px;
+}
+
+#form #fbutton button {
+  padding: 19px 39px 18px 39px;
+  color: #FFF;
+  background-color: #4bc970;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  border-radius: 5px;
+  width: 100%;
+  border: 1px solid #3ac162;
+  border-width: 1px 1px 3px;
+  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+  margin-bottom: 10px;
+}
+
+#form fieldset {
+  margin-bottom: 30px;
+  border: none;
+}
+
+#form legend {
+  font-size: 1.4em;
+  margin-bottom: 10px;
+}
+
+#form label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+#form label.light {
+  font-weight: 300;
+  display: inline;
+}
+
+.number {
+  background-color: khaki;
+  color: #000;
+  height: auto;
+  width: 100px;
+  display: inline-block;
+  font-size: 0.8em;
+  margin-right: 4px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 2%;
+}
+
+
 
 /*******************
 REPONSIVE CSS
@@ -461,6 +564,13 @@ REPONSIVE CSS
   }    
 }
 
+@media screen and (min-width: 480px) {
+
+  form {
+    max-width: 480px;
+  }
+
+}
 
 
 @media (min-width: 568px){
@@ -479,3 +589,4 @@ REPONSIVE CSS
     width: 100%;
     }
 }
+
