--- a/louisvilleMusicCo/css/main.css
+++ b/louisvilleMusicCo/css/main.css
@@ -254,7 +254,6 @@ header {
 }
 
 .introinfo {
-/*  float: left;*/
   width: 90%;
   height: auto;
   padding: 5%;
@@ -265,13 +264,12 @@ header {
 
 .servicesli  {
     font-family: 'Raleway', sans-serif;
-     /*float: right;*/
        display: inline-block;
        width: 90%;
        height: auto;
        text-align: justify-all;
        margin:15px 0 10px 0px;
-/*     border-left: thin solid #000;*/
+       box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
        padding: 5%;
         
    }
@@ -291,12 +289,18 @@ Footer
   background-color: #000;
 }
 
+.footerinfo a{
+  font-size: 12px;
+  color: gold;
+
+}
+
 table {
   max-width: 960px;
   margin: 10px auto;
-
-
 }
+
+
 
 caption {
 /*  font-size: 100em;*/
@@ -309,7 +313,7 @@ caption {
 thead th {
   font-weight: 800;
   background: #8a97a0;
-  color: red;
+
 }
 
 tr {
@@ -366,19 +370,19 @@ footer p {
                         SECTION.repairBox STYLES
 -------------------------------------------------------------------*/
 
-.repairBox .repair-content {
+.repair-content .repairBox {
     padding: 7px;
     box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
     margin-bottom: 20px;
-    width: 100%;
-    height: 650;
+    width: 200%;
+    height: auto;
     opacity: 0.8;
     margin: 15px auto 10px;
     background-color: goldenrod;
 }
 
-.repairBox .repair-content h3{
-  margin:0;
+.repair-content .repairBox h3{
+ margin-bottom: 2px;
   line-height:180px;
 }
 
@@ -386,11 +390,15 @@ footer p {
   width: 30%;
   height:auto;
   overflow: hidden;
+  box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
+
 
 }
+
 /*------------------------------------------------------------------
                         SECTION.lessons, .lesson-grid STYLES
 -------------------------------------------------------------------*/
+
 .lessons {
   box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
   overflow: hidden;
@@ -442,7 +450,7 @@ form {
   max-width: 300px;
   margin: 10px auto;
   padding: 10px 20px;
-  background: #fafad2;
+  background: #f7f7f7;
   border-radius: 8px;
 }
 
@@ -471,8 +479,8 @@ textarea,
   outline: 0;
   padding: 15px;
   width: 100%;
-  background-color: #f6f6af;
-  color: #8a97a0;
+  background-color: #ccc;
+  color: #000;
   box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
   margin-bottom: 30px;
 }
@@ -558,7 +566,7 @@ REPONSIVE CSS
 .logoblob {
     Display: none;}
 
-.repair-content {
+.repair-content .repairBox {
   width: 50%;
   height: auto;
   }    
@@ -584,6 +592,7 @@ REPONSIVE CSS
     Display: none;
   
   }
+
 
   .ucm {
     width: 100%;
