--- a/lmc/css/main.css
+++ b/lmc/css/main.css
@@ -10,9 +10,6 @@ body {
   background:#fff;
 }
 
-/********************
-Top Navigation bar
-********************/
 h3 {
   font-size: 17px;
   font-weight: bold;
@@ -25,7 +22,7 @@ h3 {
 a {
   font-size: 17px;
   font-weight: bolder;
-  padding: 5px;
+  padding: 2px;
   text-decoration: none;
   margin-top: 1px;
   margin-bottom: 1px;
@@ -46,11 +43,12 @@ span {
   text-align: center;
   text-decoration: none;
 }
-
+/********************
+Top Navigation bar
+********************/
 
 #menuA li {
     font-family: 'Raleway', sans-serif;
-    float: right;
     margin: 0 auto;
   }
 
@@ -76,6 +74,59 @@ span {
 
 }
 
+/********************
+#mainBar Navigation
+********************/
+.nav {
+    border:1px solid #b7b7b7;
+    border-width:2px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+}
+.nav li {
+    display:inline;
+}
+.nav a {
+    display:inline-block;
+    padding:10px;
+}
+
+#mainBar a:link, a:visited {
+    display: inline-block;
+    width: 120px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    font-weight: bolder;
+    line-height: 20px;
+    text-align: center;
+    color: #818576;
+    background-color: #FFFFFF;
+    border-top: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+    border-left: 3px solid #ccc;
+    text-align: center;
+    padding: 4px;
+    text-decoration: none;
+    text-transform: uppercase;
+    position: relative;
+   }
+
+#mainBar a:hover, a:active, a:focus {
+    background-color: #afafae;
+
+}
+
+/* Select menu*/
+
+
+ul li.selected a {
+  color: #979fa2;
+}
+
+
+
 
 /**Links**/
 
@@ -85,29 +136,24 @@ Search bar and images (#shopConnect)
 ********************/
 #shopConnect {
   width: 90%;
-  /*height: 90%;*/
   height: auto;
   background-color: #fff;
   overflow: auto;
-  /*z-index: -48;*/
 }
 
 .logoblob {
   width: 100%;
-  /*height: 10%; */
   height: auto;
   background: transparent;
-  /*background:#fff;*/
-  /*border: #fff;*/
-  /*margin: 0 auto;*/
-  /*overflow: hidden;*/
-  /*z-index: -50;*/
+
 }
 
 
 body{
  background-color:#fff;
 }
+
+/*Search bar*/
 
 #gradient{
  width:0;
@@ -146,7 +192,7 @@ input[type="search"] {
 
 }
 
-#sbutton button[type="submit"] {
+#sbutton {
    width:35px;
    height:30px;
    background-image:url(../images/search-btn.png);
@@ -195,52 +241,9 @@ input[type="search"] {
 
 }
 
-/********************
-#mainBar Navigation
-********************/
-
-
-#mainBar a:link, a:visited {
-    display: inline;
-    width: 120px;
-    font-family: 'Raleway', sans-serif;
-    font-size: 12px;
-    font-weight: bolder;
-    line-height: 20px;
-    text-align: center;
-    color: #818576;
-    background-color: #FFFFFF;
-    border-top: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    border-left: 3px solid #ccc;
-    text-align: center;
-    padding: 4px;
-    text-decoration: none;
-    text-transform: uppercase;
-    position: relative;
-    float: left;
-
-   }
-
-#mainBar a:hover, a:active, a:focus {
-    background-color: #afafae;
-
-}
-
-/* Select menu*/
-
-/*ul li.selected {
-  background: #fff;*/
-}
-
-ul li.selected a {
-  color: #979fa2;
-}
-
-
 
 /********************
-Body
+.introinfo & .servicesli
 ********************/
 h1 {
   font-weight: bold;
@@ -259,6 +262,7 @@ header {
   padding: 5%;
   display: inline-block;
   text-align: justify;
+  border-style: ridge none;
   }
 
 
@@ -267,10 +271,11 @@ header {
        display: inline-block;
        width: 90%;
        height: auto;
-       text-align: justify-all;
+       text-align: justify;
        margin:15px 0 10px 0px;
-       box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
+       border-style: ridge none;
        padding: 5%;
+
         
    }
 
@@ -370,18 +375,8 @@ footer p {
                         SECTION.repairBox STYLES
 -------------------------------------------------------------------*/
 
-.repair-content .repairBox {
-    padding: 7px;
-    box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
-    margin-bottom: 20px;
-    width: 200%;
-    height: auto;
-    opacity: 0.8;
-    margin: 15px auto 10px;
-    background-color: goldenrod;
-}
 
-.repair-content .repairBox h3{
+.repair-content .repairBox h3 {
  margin-bottom: 2px;
   line-height:180px;
 }
@@ -391,8 +386,6 @@ footer p {
   height:auto;
   overflow: hidden;
   box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
-
-
 }
 
 /*------------------------------------------------------------------
@@ -400,7 +393,7 @@ footer p {
 -------------------------------------------------------------------*/
 
 .lessons {
-  box-shadow: 1px 1px 3px gray, -1px -1px 3px gray;
+  border-style: ridge none;
   overflow: hidden;
 }
 
@@ -496,7 +489,7 @@ input[type="checkbox"] {
   border-radius: 2px;
 }
 
-#form #fbutton button {
+#fbutton {
   padding: 19px 39px 18px 39px;
   color: #FFF;
   background-color: #4bc970;
