Small change to colors inside CSS, Removal of Under construction sign and Change Alert Message

--- a/lmc/css/main.css
+++ b/lmc/css/main.css
@@ -443,7 +443,7 @@ form {
   max-width: 300px;
   margin: 10px auto;
   padding: 10px 20px;
-  background: #f7f7f7;
+  background: ##E00000;
   border-radius: 8px;
 }
 
@@ -492,13 +492,13 @@ input[type="checkbox"] {
 #fbutton {
   padding: 19px 39px 18px 39px;
   color: #FFF;
-  background-color: #4bc970;
+  background-color: #f4af00;
   font-size: 18px;
   text-align: center;
   font-style: normal;
   border-radius: 5px;
   width: 100%;
-  border: 1px solid #3ac162;
+  border: 1px solid crimson;
   border-width: 1px 1px 3px;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
   margin-bottom: 10px;
@@ -525,7 +525,7 @@ input[type="checkbox"] {
 }
 
 .number {
-  background-color: khaki;
+  background-color: #f4af00;
   color: #000;
   height: auto;
   width: 100px;
