--- a/lmc/css/main.css
+++ b/lmc/css/main.css
@@ -273,11 +273,22 @@ header {
        margin:15px 0 10px 0px;
        border-style: ridge none;
        padding: 5%;
-
-        
-   }
+  }
 
 
+.servicesli img {
+   display:inline;
+   width: 15px;
+   height: auto;
+   background: transparent;
+}
+
+.composers {
+
+  width: 100%;
+  height: auto;
+  background: transparent;
+}
 /********************
 Footer
 ********************/
@@ -416,7 +427,7 @@ footer p {
                         SECTION joinUs STYLES
 -------------------------------------------------------------------*/
 
-.email {
+.areaIdImage {
   width: 10%;
   height: auto;
   background: transparent;
@@ -430,107 +441,6 @@ footer p {
   
 }
 
-/*------------------------------------------------------------------
-                        CONTACTUS STYLES
--------------------------------------------------------------------*/
-
-form {
-  max-width: 300px;
-  margin: 10px auto;
-  padding: 10px 20px;
-  background: #E00000;
-  border-radius: 8px;
-}
-
-#form h1 {
-  margin: 0 0 30px 0;
-  text-align: center;
-}
-
-#form input[type="text"],
-input[type="password"],
-input[type="date"],
-input[type="datetime"],
-#form input[type="email"],
-input[type="number"],
-#form input[type="search"],
-input[type="tel"],
-input[type="time"],
-input[type="url"],
-textarea,
-#form select {
-  background: rgba(255,255,255,0.1);
-  border: none;
-  font-size: 16px;
-  height: auto;
-  margin: 0;
-  outline: 0;
-  padding: 15px;
-  width: 100%;
-  background-color: #ccc;
-  color: #000;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-  margin-bottom: 30px;
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin: 0 4px 8px 0;
-}
-
-#form select {
-  padding: 6px;
-  height: 32px;
-  border-radius: 2px;
-}
-
-#fbutton {
-  padding: 19px 39px 18px 39px;
-  color: #FFF;
-  background-color: #f4af00;
-  font-size: 18px;
-  text-align: center;
-  font-style: normal;
-  border-radius: 5px;
-  width: 100%;
-  border: 1px solid crimson;
-  border-width: 1px 1px 3px;
-  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
-  margin-bottom: 10px;
-}
-
-#form fieldset {
-  margin-bottom: 30px;
-  border: none;
-}
-
-#form legend {
-  font-size: 1.4em;
-  margin-bottom: 10px;
-}
-
-#form label {
-  display: block;
-  margin-bottom: 8px;
-}
-
-#form label.light {
-  font-weight: 300;
-  display: inline;
-}
-
-.number {
-  background-color: #f4af00;
-  color: #000;
-  height: auto;
-  width: 100px;
-  display: inline-block;
-  font-size: 0.8em;
-  margin-right: 4px;
-  line-height: 30px;
-  text-align: center;
-  border-radius: 2%;
-}
 
 
 
