--- a/lmc/css/main.css
+++ b/lmc/css/main.css
@@ -47,7 +47,7 @@ span {
 Top Navigation bar
 ********************/
 .topnav{
-    display:fixed;
+    position:fixed;
     padding-bottom:10px;
     margin:0 auto;
     }
